--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "funstaff/tika-bundle",
+    "type": "bundle",
     "description": "Bundle for Apache Tika wrapper",
     "require": {
         "funstaff/tika": "dev-master"
@@ -10,5 +11,9 @@
             "name": "Bertrand Zuchuat",
             "email": "bertrand.zuchuat@gmail.com"
         }
-    ]
+    ],
+    "require": {
+        "php": ">=5.3.2"
+    },
+    "minimun-stability": "dev"
 }
