--- a/composer.json
+++ b/composer.json
@@ -2,9 +2,6 @@
     "name": "funstaff/tika-bundle",
     "type": "bundle",
     "description": "Bundle for Apache Tika wrapper",
-    "require": {
-        "funstaff/tika": "dev-master"
-    },
     "license": "MIT",
     "authors": [
         {
@@ -13,7 +10,8 @@
         }
     ],
     "require": {
-        "php": ">=5.3.2"
+        "php": ">=5.3.2",
+        "funstaff/tika": "dev-master"
     },
     "minimun-stability": "dev"
 }
