--- a/composer.json
+++ b/composer.json
@@ -13,5 +13,8 @@
         "php": ">=5.3.2",
         "funstaff/tika": "dev-master"
     },
+    "autoload": {
+        "psr-0": { "Funstaff\\TikaBundle": "" }
+    },
     "minimun-stability": "dev"
 }
