--- a/composer.json
+++ b/composer.json
@@ -16,5 +16,6 @@
     "autoload": {
         "psr-0": { "Funstaff\\TikaBundle": "" }
     },
+    "target-dir": "Funstaff/TikaBundle",
     "minimun-stability": "dev"
 }
