Delete minimun-stability parameter on composer

--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,5 @@
     "autoload": {
         "psr-0": { "Funstaff\\TikaBundle": "" }
     },
-    "target-dir": "Funstaff/TikaBundle",
-    "minimun-stability": "dev"
+    "target-dir": "Funstaff/TikaBundle"
 }
